--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <% @students.each do |student| %>
-    <%= render partial: 'student', locals: {student: @student} %>
+    <%= render partial: 'student', locals: {student: student} %>
 <% end %>
 
 <%= form_tag students_path, method: :get do %>
