--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -5,4 +5,6 @@ Classroom Info
 </p>
 
 We now want to call out the oldest student in the class:
-<%= render 'students/student', locals: {student: @student} %>
+<% @classroom.students.all.each do |student|%>
+    <%= render 'students/student', locals: {student: @student} %>
+<% end %>
