--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,10 +1,7 @@
 Classroom Info
-<p>
-<%= @classroom.course_name %>
-<%= @classroom.semester %>
-</p>
+<%=render partial: 'classroom', locals: {classroom: @classroom}%>
 
-We now want to call out the oldest student in the class:
-<% @classroom.students.all.each do |student|%>
-    <%= render 'students/student', locals: {student: @student} %>
+<% @classroom.students.each do |s|%>
+    <%= render partial: 'students/student', locals: {student: s}%>
 <% end %>
+
